# hyperzero

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml  requirements-render.txt
benchmarks/: benchmark_engine.py
configs/: gpu_architecture_20260519.json  gpu_architecture_remaining_20260519.json  gpu_final_20260518.json  gpu_last_20260518.json  gpu_supplemental_20260518.json  phase3_3d_target_ready.json  phase4_3d_stability_guard_20260519.json  phase6_4d_heuristic_followup_20260519.json  phase6_4d_smoke_20260519.json  phase6_4d_stronger_search_probe_20260520.json  phase6_4d_tactical_weighted_20260519.json  phase6_4d_tactical_weighted_fresh_20260520.json  phase6_4d_tactical_weighted_fresh_seed1_20260520.json  phase6_4d_tactical_weighted_fresh_seed2_20260520.json  phase6_4d_tactical_weighted_fresh_seed3_20260520.json  phase6_4d_training_20260519.json  universal_4d_only_20260523.json  universal_curriculum_v2_20260520.json  universal_curriculum_v3_20260520.json  universal_gpu_starter_20260520.json  universal_heuristic_pressure_20260521.json  universal_repair_2d6x7_20260522.json  universal_repair_4d_20260522.json  universal_repair_4d_heavy_20260523.json  universal_repair_balanced_20260522.json  universal_repair_recovery_20260525.json  universal_smoke_20260520.json  universal_smoke_20260525.json  universal_sprint_active24_20260521.json
docs/: architecture.md  deployment.md  engine.md  experiments.md  findings-for-paper.md  game-spec.md  local-web-demo.md  proposal.md  roadmap.md  status.md  training-v1.md  universal-agent.md
(+100 files in other folders)
